# physical_momir

./: .gitignore  config.yaml  install.sh  main.py  momir.service  pyproject.toml  test_encoder.py  test_single_tube.py
momir/: cards.py  encoder.py  prepare_images.py  print.py  tube_display.py
